android-app: expanding event details

--- a/android-app/app/src/main/res/values/strings.xml
+++ b/android-app/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="twenty_fifth_anniversary">25 lat</string>
     <string name="more">Więcej</string>
     <string name="events_title">25-lecie\nWydziału Grafiki\ni Sztuki Mediów</string>
+    <string name="share">udostępnij</string>
+    <string name="add_to_calendar">dodaj do kalendarza</string>
 </resources>
